Set up mongo db and TaxRateRepository